# CRUD_Projeto_1

todo-api/: Cargo.toml  crud-e10cf-firebase-adminsdk-v94bg-17f85e6cc9.json  package-lock.json
todo-api/src/: main.rs
todo-list/: package-lock.json
todo-list/src/: App.css  App.js
